samples/_failures_safe/1761075932_d63e28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8508731.c: In function ‘reset_machine’:
./samples/SAFE/__tmp_f8508731.c:158:32: error: expected ‘)’ at end of input
  158 |     initialize_state_machine(sm
      |                             ~  ^
      |                                )
./samples/SAFE/__tmp_f8508731.c:158:5: error: expected declaration or statement at end of input
  158 |     initialize_state_machine(sm
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
